--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,12 @@ body {
   text-align:right;
 }
 
+#chat-page .am-grid-icon{
+	display: none;
+}
+#chat-page .am-grid-text{
+	margin-top: 0;
+}
 .stick-footer{
 	position: fixed;
 	bottom:0;
